--- a/src/stylus/style.scss
+++ b/src/stylus/style.scss
@@ -11,7 +11,7 @@ html, body, div, span, applet, object, iframe, h2, h3, h4, h5, h6, p, blockquote
 html, body {
   height: 100%;
   font-size: 16px; }
-.wrapper {
+.wrapper, .page {
   overflow: hidden;
   min-height: 100%; }
 /*Header*/
