--- a/src/stylus/style.scss
+++ b/src/stylus/style.scss
@@ -14,6 +14,10 @@ html, body {
 .wrapper {
   overflow: hidden;
   min-height: 100%; }
+
+.pageView {
+	min-height: 100%;
+}
 /*Header*/
 
 .wrapper__header {
