--- a/src/stylus/style.scss
+++ b/src/stylus/style.scss
@@ -11,12 +11,12 @@ html, body, div, span, applet, object, iframe, h2, h3, h4, h5, h6, p, blockquote
 html, body {
   height: 100%;
   font-size: 16px; }
-.wrapper {
+.wrapper { 
   overflow: hidden;
-  min-height: 100%; }
+  min-height: 100%;}
 
-.pageView {
-	height: 100%;	
+.pageView {  
+  min-height: 100%;	
 }
 /*Header*/
 
@@ -123,6 +123,7 @@ html, body {
 }
 .tab-content__layoutCategories, .Categories, .tab-content__layoutitems {
     flex-basis: 284px;
+	margin-top: 20px;
 }
 .tab-content .Categories {
     width: 200px;
