--- a/src/stylus/common.scss
+++ b/src/stylus/common.scss
@@ -5,27 +5,27 @@ body {
 	height: 100%;
 	margin: 0;
 }
-.wrapper {
+.newv__wrapper {
 	height: 100%;
 	
 }
-.page {
+.newv__page {
 	display: flex;	
 	flex-flow: row wrap;
 	min-height: 100%;
 }
 
-.header, .nav, .footer, .section {
+.all__header, .page__navbar, .footer__mother, .section {
   	flex: 1 auto;
 }
 
-.elementspage {
+.newv__elementspage {
 	width: 100%;
     float: right;
     margin-bottom: 20px;
 }
 
-.viewmode {
+.newv__viewmode {
 	height: 0;
 	overflow: hidden;
 	text-align: right;
@@ -33,28 +33,28 @@ body {
     margin-top: 0;
 }
 
-.elementspagelink {
+.newv__elementspagelink {
   	text-decoration: none;
     width: 80%;    
 }
 
-.elementspagelink:link {
+.newv__elementspagelink:link {
   	color: black; }
 
-.elementspagelink--style {  
+.newv__elementspagelink--style {  
   	display: inline-block;
   	clear: both; }
 
-.elementspagelink:visited {
+.newv__elementspagelink:visited {
   	color: blue; }
 
-.elementspagelink:hover {
+.newv__elementspagelink:hover {
   	color: orange; }
 
-.elementspagelink:active {
+.newv__elementspagelink:active {
   	color: red; }
 
-.product-section {
+.newv__product-section {
 	box-sizing: border-box;
 	padding-top: 70px;
     padding-bottom: 40px;
@@ -63,7 +63,7 @@ body {
     margin: 2% auto; 
 }
 
-.product-section__tab-content {
+.newv__product-section__tab-content {
     display: flex;
 	padding-left: 0;
     -webkit-flex-flow: row wrap;
@@ -71,43 +71,22 @@ body {
     justify-content: center;
 }
 
-.tab-content__layoutitems {
+.newv__tab-content__layoutitems {
     flex-basis: 284px;}
 
-.Categories {
+.newv__Categories {
 	display: inline-block;
 	box-sizing: border-box;
 }
 
-.pages__items:hover {
+.newv__pages__items:hover {
     animation: none;
     border: 1px solid #000;
     color: orange;
     font-size: 14px;
 }
 
-.elementspagelink {
-  text-decoration: none;
-    width: 80%;    
-}
-
-.elementspagelink:link {
-  color: black; }
-
-.elementspagelink--style {  
-  display: inline-block;
-  clear: both; }
-
-.elementspagelink:visited {
-  color: blue; }
-
-.elementspagelink:hover {
-  color: orange; }
-
-.elementspagelink:active {
-  color: red; }
-
-.elementspagelink__img {
+.newv__elementspagelink__img {
   content: "";
   height: 200px;
   background-size: contain;
@@ -127,7 +106,7 @@ body {
     background-image: url("../img/motherboard/Gigabyte/GIGABYTE%20GA-H81M-S2PV.jpg");
 }
 
-.elementspage__figcaption {
+.newv__elementspage__figcaption {
     font-size: 14px;
 	text-align: center;
 }
