--- a/src/stylus/navigation.scss
+++ b/src/stylus/navigation.scss
@@ -1,9 +1,9 @@
 .page__menu {
 	margin-top: 65px;
 }
-.navbar, .navbar__link {
+.page__navbar, .page__navbar__link {
       box-sizing: border-box;}
-.navbar {	
+.page__navbar {	
 	display: flex;
 	-webkit-flex-flow: row wrap;
 	width: 100%;
@@ -68,7 +68,7 @@
 	&__img--cooling {
 	  	background-image: url("../img/Symbol/Cooling.jpg"); }
 }
-.navbar--desktop {
+.page__navbar--desktop {
 	position: static;
 	list-style-type: none;
 	border: 5px solid rebeccapurple;	
