--- a/src/stylus/style.scss
+++ b/src/stylus/style.scss
@@ -306,8 +306,9 @@ html, body {
   height: 25%;
   min-width: 200px; }
 .slider-img__big-img {
-  width: 100%;
-  min-width: 200px; }
+    width: 100%;
+    min-width: 200px;
+    height: 350px;}
 .big-img__positioner {
   width: 70%; }
 .min-img--style {
