--- a/src/stylus/navigation.scss
+++ b/src/stylus/navigation.scss
@@ -1,5 +1,7 @@
 .page__menu {
+	width: 100%;
 	margin-top: 65px;
+	margin-bottom: 15px;
 }
 .page__navbar, .page__navbar__link {
       box-sizing: border-box;}
@@ -25,6 +27,7 @@
 
 	&__link:link {
 		color: black; }
+	
 	&__link:visited {
 		color: blue; }
 
@@ -37,6 +40,7 @@
 
 	&__link--active {
 	 	background-color: aqua; }
+	
 	&__img {
 		  display: block;
 		  background-size: contain;
@@ -74,3 +78,18 @@
 	border: 5px solid rebeccapurple;	
 	border-bottom-left-radius: 15px;
 	border-bottom-right-radius: 15px; }
+
+@media screen and (min-width:480px) and (max-width:1100px) {	
+	.page__navbar {		
+		align-self: flex-start;
+		&__link {
+			width: 49%;
+			border: 1px solid #639;
+			margin: 1px;
+		}
+	}
+}
+
+@media screen and (min-width:1100px) {
+	
+}
