--- a/src/stylus/common.scss
+++ b/src/stylus/common.scss
@@ -75,6 +75,7 @@ body {
 .newv__tab-content__layoutitems {
     flex-basis: 284px;
 	text-align: center;
+	margin-bottom: 20px;
 }
 
 .newv__Categories {
