--- a/src/stylus/style.scss
+++ b/src/stylus/style.scss
@@ -310,7 +310,8 @@ html, body {
     min-width: 200px;
     height: 350px;}
 .big-img__positioner {
-  width: 70%; }
+  width: 70%;
+  height: 100%;}
 .min-img--style {
   vertical-align: middle;
   width: 10%;
@@ -965,6 +966,12 @@ nav, .itemsContent {
 }*/
 .background{
     background: aqua;
+}
+
+#card1-error, #card2-error, #card3-error, #card4-error {
+    position: absolute;
+    top: -75px;
+    display: block;
 }
 @import 'media.scss';
 @import 'app.scss';
