--- a/src/stylus/style.scss
+++ b/src/stylus/style.scss
@@ -94,7 +94,7 @@ html, body {
     padding-top: 70px;
     padding-bottom: 40px;
     margin-bottom: 10px;
-    width: 90%;
+    width: 80%;
     margin: 2% auto; }
 .tab-content .imgCooling {
   background-image: url("../img/Cooling/DEEPCOOL/DEEPCOOL%20Beta%2010.jpg"); }
@@ -333,7 +333,7 @@ html, body {
   border-right: 0; }
 .product-description__layout-description {
   margin-top: 10px;
-  width: 60%; }
+}
  .img-star {
   background: url("../img/Symbol/rating.png") repeat-x;
   width: 80px;
