--- a/src/stylus/media.scss
+++ b/src/stylus/media.scss
@@ -34,6 +34,7 @@
         width:100%;
         margin-top: 0px;}
     .product-section{
+		padding: 0;
         width: 332px;
         margin: 20px auto 40px auto;}
     .add-cart__btn {
@@ -214,6 +215,7 @@
         width: 60%;
     }
     .product-section{
+		padding: 0;
         width:95%;
         margin: 6px auto 20px;
     }
@@ -280,5 +282,5 @@
     }   
     .elementspage {
         width: 100%;
-    }
+    }	
 }
