--- a/src/stylus/navigation.scss
+++ b/src/stylus/navigation.scss
@@ -83,6 +83,10 @@
 	font-size: 20px;
 }
 
+.product-section{
+		padding: 0;        
+}
+
 @media screen and (min-width:480px) and (max-width:1100px) {	
 	.page__navbar {		
 		align-self: flex-start;
@@ -118,5 +122,7 @@
 			margin-bottom: 0;
 		}
 	}
-		
+	.product-section{
+		padding: 70px;        
+    }		
 }
