--- a/src/stylus/media.scss
+++ b/src/stylus/media.scss
@@ -50,6 +50,7 @@
     .tab-content .Categories {
         margin: 2px;}
     .orderForm {
+        
        }
     .line1 input, .line4 input, .line2 select {
         width: 45px;
@@ -60,6 +61,7 @@
         width: 315px;
         height: 168px;
         margin-bottom: 50px;
+        margin-top: 70px;
             .line2 {
             left: 74px;
             top: 45px;}
@@ -248,6 +250,7 @@
         margin:auto;
     }
     .orderForm {
+         margin-top: 70px;
         margin-bottom: 80px;
     }
         .Categories:hover {
