--- a/src/stylus/navigation.scss
+++ b/src/stylus/navigation.scss
@@ -4,7 +4,8 @@
 	margin-bottom: 15px;
 	box-sizing: border-box;
 }
-.page__navbar, .page__navbar__link {
+.page__navbar,
+.page__navbar__link {
       box-sizing: border-box;}
 .page__navbar {	
 	display: flex;
