--- a/src/stylus/common.scss
+++ b/src/stylus/common.scss
@@ -6,11 +6,12 @@ body {
 	margin: 0;
 }
  
-.newv__wrapper {
-	height: 100%;	
+.page {
+	height: 100%;
+    display:flex;
 }
 
-.newv__page, .wrapper {
+.page, .wrapper {
 	display: flex;	
 	flex-flow: row wrap;
 	min-height: 100%;
