--- a/src/stylus/footer.scss
+++ b/src/stylus/footer.scss
@@ -6,5 +6,5 @@
 	padding-top: 12px;
 	text-align: center; 
 	font-size: 20px;
-	background: -webkit-radial-gradient(center, circle farthest-side, #000, #7a7a7a 80%);
+	background: radial-gradient(center, circle farthest-side, #000, #7a7a7a 80%);
 	color: white;}
