--- a/src/stylus/header.scss
+++ b/src/stylus/header.scss
@@ -13,7 +13,7 @@ header:after {
 
 .all__header{	
 	font-size: 20px;
-	background: -webkit-radial-gradient(center, circle farthest-side, #000, #7a7a7a 80%);
+	background: radial-gradient(center, circle farthest-side, #000, #7a7a7a 80%);
   	color: white;
 	&__elements { 
 		display: inline-block;
