--- a/src/stylus/style.scss
+++ b/src/stylus/style.scss
@@ -20,11 +20,7 @@ html, body {
 
 /*Header*/
 
-.wrapper__header {
-  width: 100%;
-  z-index: 10;
-  height: 70px;
-  position: fixed; }
+
 .header, .footer, .header__elements, .product-section, .tab-content__layoutCategories, .tab-content__layoutitems, tab-content__layoutadd, .Categories, .modal-dialog__login-form, .login-form__input, .navbar, .navbar__link, .product-section__product-description, .elementspage, .cartpage {
       box-sizing: border-box;}
 .header__elements, .tab-content__layoutCategories, .tab-content__layoutitems, tab-content__layoutadd, .Categories, .navbar__link,  .breadcrumb__list, .min-img__arrow, .min-img__arrow, .min-img--style, .layout-description__header, .layout-description__img-star, .add-cart__btn, .lineSocial__line-social, .addressinfo__text,   {
@@ -34,15 +30,22 @@ html, body {
       float: left;
 }
 .footer {
-  margin-top: -50px;
-  height: 50px;
-  padding-top: 12px;
-  text-align: center; }
+	align-self: flex-end;
+	width: 100%;
+	box-sizing: border-box;	
+	height: 50px;
+	padding-top: 12px;
+	text-align: center; 
+	font-size: 20px;
+    
+}
 .header, .footer {
+  
   font-size: 20px;
-  background: -webkit-radial-gradient(center, circle farthest-side, #000, #7a7a7a 80%);
+  background: radial-gradient(center, circle farthest-side, #000, #7a7a7a 80%);
   color: white;}
-    .header{
+.header{
+    align-self: flex-start;
         &__elements {
           margin-left: 15px;
           color: white;
