--- a/src/stylus/content.scss
+++ b/src/stylus/content.scss
@@ -6,9 +6,11 @@ body {
 	margin: 0;
 }
  
-.page {
-
+.page__content {
+    margin-top:66px;
     display:flex;
+    margin-bottom: 20px;
+    margin:auto;
 }
 
 .page {
