--- a/src/stylus/footer.scss
+++ b/src/stylus/footer.scss
@@ -1,9 +1,13 @@
-.footer {	
-	align-self: flex-end;
+.page__footer{
+    align-self: flex-end;
 	width: 100%;
+    vertical-align: middle;
+}
+
+.footer {	
+    height: 70px;
 	box-sizing: border-box;	
-	height: 50px;
-	padding-top: 12px;
+    padding-top: 23px;
 	text-align: center; 
 	font-size: 20px;
 	background: radial-gradient(center, circle farthest-side, #000, #7a7a7a 80%);
