--- a/src/stylus/content.scss
+++ b/src/stylus/content.scss
@@ -5,36 +5,35 @@ body {
 	height: 100%;
 	margin: 0;
 }
- 
-.page__content {
-    margin-top:66px;
-    display:flex;
-    margin-bottom: 20px;
-    margin:auto;
-}
 
 .page {
 	display: flex;	
 	flex-flow: row wrap;
 	min-height: 100%;
+	
+	&__content {
+		width: 100%;
+    	display:flex;    
+    	margin: auto;
+		margin-top:70px;
+		flex-direction: column;
+	}
 }
 
 .all__header, .page__navbar, .footer__mother, .section {
   	flex: 1 auto;
 }
 
-.newv__elementspage {
-	width: 100%;
-    float: right;
+.goods {	
+	width: 100%;    
     margin-bottom: 20px;
-}
-
-.newv__viewmode {
-	height: 0;
-	overflow: hidden;
-	text-align: right;
-    margin-right: 20px;
-    margin-top: 0;
+	&__view {
+		display: none;
+		overflow: hidden;
+		text-align: right;
+    	margin-right: 20px;
+    	margin-top: 0;
+	}
 }
 
 .newv__elementspagelink {
@@ -123,15 +122,19 @@ body {
 }
 
 @media screen and (min-width:1100px) {
-	.newv__elementspage {
-    	width: 80%; 
-		margin-top: 70px;
+	.page__content {
+		flex-direction: row;
 	}
-	.newv__viewmode {
-    	height: 20px;
-    	overflow: hidden;
-    	text-align: right;
-    	margin-right: 20px;
-    	margin-top: 10px;
+	
+	.goods {
+		width: 88%;
+		&__view {
+			display: block;
+    		height: 20px;
+    		overflow: hidden;
+    		text-align: right;
+    		margin-right: 20px;
+			margin-top: 10px;
+		}
 	}
 }
