--- a/src/stylus/header.scss
+++ b/src/stylus/header.scss
@@ -16,6 +16,7 @@ header:after {
 	font-size: 20px;
 	background: radial-gradient(center, circle farthest-side, #000, #7a7a7a 80%);
   	color: white;
+	height: 70px;
 	&__element { 
 		display: inline-block;
 		border: 1px solid #b8b8b8;
