--- a/src/stylus/app.scss
+++ b/src/stylus/app.scss
@@ -19,3 +19,4 @@ html, body, div, span, applet, object, iframe, h2, h3, h4, h5, h6, p, blockquote
 @import "footer.scss";
 @import "navigation.scss";
 @import "homePage.scss";
+@import "goods.scss";
