--- a/src/stylus/style.scss
+++ b/src/stylus/style.scss
@@ -390,10 +390,10 @@ nav, .itemsContent {
   content: '';
   clear: both; }
 
-.viewmode {
+/*.viewmode {
   text-align: right;
   margin-right: 20px;
-  margin-top: 10px; }
+  margin-top: 10px; }*/
 
 /*Items*/
 .elementspagelink {
