--- a/src/stylus/goods.scss
+++ b/src/stylus/goods.scss
@@ -70,6 +70,35 @@
 	&:active {
   		color: red;
 	}
+	
+	&__figcaption {
+		font-size: 14px;
+		text-align: center;
+	}
+	
+	&__img {
+	  	content: "";
+	  	height: 200px;
+	  	background-size: contain;
+	  	background-repeat: no-repeat;
+	  	background-position: center;
+		
+		&-img1 {
+			background-image: url("../img/motherboard/Gigabyte/GIGABYTE%20GA-78LMT-S2.jpg");
+		}
+		
+		&-img2 {
+			background-image: url("../img/motherboard/Gigabyte/GIGABYTE%20GA-990FXA-UD5.jpg");
+		}
+		
+		&-img3 {
+			background-image: url("../img/motherboard/Gigabyte/GIGABYTE%20GA-B85-HD3.jpg");
+		}
+		
+		&-img4 {
+			background-image: url("../img/motherboard/Gigabyte/GIGABYTE%20GA-H81M-S2PV.jpg");
+		}
+	}
 }
 
 @media screen and (min-width: 1100px) {
