--- a/src/stylus/goods.scss
+++ b/src/stylus/goods.scss
@@ -1,12 +1,27 @@
 .goods {	
 	width: 100%;    
     margin-bottom: 20px;
+	
 	&__view {
 		display: none;
 		overflow: hidden;
 		text-align: right;
     	margin-right: 20px;
     	margin-top: 0;
+	}
+	
+	&__folder {
+		display: flex;
+		padding-left: 0;
+		-webkit-flex-flow: row wrap;
+		list-style-type: none;
+		justify-content: center;
+	}
+	
+	&__unit {
+		flex-basis: 284px;
+		text-align: center;
+		margin-bottom: 20px;
 	}
 }
 
@@ -28,6 +43,61 @@
 	
 	&:active {
   		color: red;
+	}
+}
+
+.unit-value {
+	text-decoration: none;
+	padding: 15px;
+	display: inline-block;
+	box-sizing: border-box;
+	border: 1px solid black;
+    border-radius: 30px;
+	
+	&:link {
+  		color: black; 
+	}
+	
+	&:visited {
+  		color: blue;
+	}
+	
+	&:hover {		
+		border: 5px solid deepskyblue;
+		color: deepskyblue;		
+	}
+	
+	&:active {
+  		color: red;
+	}
+	
+	&__figcaption {
+		font-size: 14px;
+		text-align: center;
+	}
+	
+	&__img {
+	  	content: "";
+	  	height: 200px;
+	  	background-size: contain;
+	  	background-repeat: no-repeat;
+	  	background-position: center;
+		
+		&-img1 {
+			background-image: url("../img/motherboard/Gigabyte/GIGABYTE%20GA-78LMT-S2.jpg");
+		}
+		
+		&-img2 {
+			background-image: url("../img/motherboard/Gigabyte/GIGABYTE%20GA-990FXA-UD5.jpg");
+		}
+		
+		&-img3 {
+			background-image: url("../img/motherboard/Gigabyte/GIGABYTE%20GA-B85-HD3.jpg");
+		}
+		
+		&-img4 {
+			background-image: url("../img/motherboard/Gigabyte/GIGABYTE%20GA-H81M-S2PV.jpg");
+		}
 	}
 }
 
