--- a/src/stylus/navigation.scss
+++ b/src/stylus/navigation.scss
@@ -19,7 +19,7 @@
 	justify-content: center;	
 	border-radius: 0px;
 	
-	&--desktop {
+	&--style {
 		box-sizing: border-box;	
 		list-style-type: none;
 		border: 5px solid rebeccapurple;	
@@ -116,7 +116,7 @@
 	}
 	
 	.navbar{
-		&--desktop {		
+		&--style {		
 			list-style-type: none;
 			border: 5px solid rebeccapurple;	
 			border-radius: 15px;
