--- a/src/stylus/goods.scss
+++ b/src/stylus/goods.scss
@@ -1,6 +1,7 @@
 .goods {	
-	width: 100%;    
-    margin-bottom: 20px;
+	width: 100%; 
+	height: 280px;
+    margin-bottom: 20px;	
 	
 	&__view {
 		display: none;
@@ -13,13 +14,13 @@
 	&__folder {
 		display: flex;
 		padding-left: 0;
-		-webkit-flex-flow: row wrap;
+		flex-flow: row wrap;
 		list-style-type: none;
 		justify-content: center;
 	}
 	
 	&__unit {
-		flex-basis: 284px;
+		width: 20%;
 		text-align: center;
 		margin-bottom: 20px;
 	}
@@ -53,6 +54,7 @@
 	box-sizing: border-box;
 	border: 1px solid black;
     border-radius: 30px;
+	width: 80%;
 	
 	&:link {
   		color: black; 
@@ -83,20 +85,95 @@
 	  	background-repeat: no-repeat;
 	  	background-position: center;
 		
-		&-img1 {
+		&-moth1 {
 			background-image: url("../img/motherboard/Gigabyte/GIGABYTE%20GA-78LMT-S2.jpg");
 		}
 		
-		&-img2 {
+		&-moth2 {
 			background-image: url("../img/motherboard/Gigabyte/GIGABYTE%20GA-990FXA-UD5.jpg");
 		}
 		
-		&-img3 {
+		&-moth3 {
 			background-image: url("../img/motherboard/Gigabyte/GIGABYTE%20GA-B85-HD3.jpg");
 		}
 		
-		&-img4 {
+		&-moth4 {
 			background-image: url("../img/motherboard/Gigabyte/GIGABYTE%20GA-H81M-S2PV.jpg");
+		}
+		
+		&-cpu1 {
+  			background-image: url("../img/CPU/AMD/AMD%20A10-7870K%20OEM.jpg"); 
+		}
+		&-cpu2 {
+  			background-image: url("../img/CPU/AMD/AMD%20FX-8300%20OEM.jpg");
+		}
+
+		&-cpu3 {
+  			background-image: url("../img/CPU/Intel/Intel%20Pentium%20G3420%20OEM.jpg");
+		}
+		
+		&-ram1 {
+  			background-image: url("../img/RAM/AMD%20Radeon/AMD%20Radeon%20Entertainment%20Series%20%5BR538G1601U2S-UOUGO%5D%208%20%D0%93%D0%B1.jpg");
+		}
+
+		&-ram2 {
+			background-image: url("../img/RAM/Crucial/Crucial%20Ballistix%20Tactical%20%5BBLT4G3D1869DT1TX0CEU%5D%204%20%D0%93%D0%B1.jpg");
+		}
+
+		&-ram3 {
+			background-image: url("../img/RAM/Kingston/Kingston%20HyperX%20FURY%20Red%20Series%20%5BHX316C10FRK216%5D%2016%20%D0%93%D0%B1.jpg");
+		}
+		
+		&-video1 {
+  			background-image: url("../img/Video adapter/ASUS/Asus GeForce GT 730 [GT730-4GD3].jpg");
+		}
+
+		&-video2 {
+		  	background-image: url("../img/Video adapter/MSI/MSI AMD Radeon R7 370 Gaming 4G.jpg");
+		}
+
+		&-video3 {
+		  	background-image: url("../img/Video adapter/Gigabyte/GIGABYTE GeForce GTX 750 Ti BLACK EDITION GV-N75TWF2BK-2GI.jpg");
+		}
+		
+		&-hdd1 {
+		  	background-image: url("../img/HDD/Seagate/Seagate%20Barracuda%207200.14%20ST2000DM001%202%20%D0%A2%D0%B1.jpg"); 
+		}
+
+		&-hdd2 {
+		  	background-image: url("../img/HDD/Toshiba/Toshiba%20DT%2001ACA200%202%20%D0%A2%D0%B1.jpg"); 
+		}
+
+		&-hdd3 {
+		  	background-image: url("../img/HDD/Western%20Digital/WD%20Caviar%20Red%20IntelliPower%20WD10EFRX%201%20%D0%A2%D0%B1.jpg"); 
+		}
+		
+		&-power1 {
+  			background-image: url("../img/Power source/Be Quiet/Be Quiet PURE POWER L8 700W [BN225].jpg");
+		}
+
+		&-power2 {
+		  	background-image: url("../img/Power source/Chieftec/Chieftec A-135 Series 650W [APS-650SB].jpg");
+		}
+
+		&-power3 {
+		  	background-image: url("../img/Power source/Thermaltake/Thermaltake TR2 600W [TR-600P].jpg");
+		}
+
+		&-power4 {
+		  	background-image: url("../img/Power source/Zalman/Zalman GVM 850W [ZM850-GVM].jpg");
+		}
+		
+		&-cooling1 {
+		  	background-image: url("../img/Cooling/DEEPCOOL/DEEPCOOL%20Ice%20Blade%20PRO%20V2.jpg"); 
+		}
+
+		&-cooling2 {
+		  	background-image: url("../img/Cooling/Thermaltake/Thermaltake%20NiC%20L31.jpg");
+		}
+
+		&-cooling3 {
+		  	background-image: url("../img/Cooling/Zalman/Zalman%20CNPS7X.jpg"); 
 		}
 	}
 }
