--- a/src/stylus/style.scss
+++ b/src/stylus/style.scss
@@ -70,7 +70,7 @@ html, body {
   padding-bottom: 2px; }    
 }
 
-/*Menu*/
+/*Menu
 .navbar {
   width: 10%;
   margin-top: 120px;
@@ -133,7 +133,7 @@ html, body {
 
   &__img--cooling {
   background-image: url("../img/Symbol/Cooling.jpg"); }
-}
+}*/
 
 /*Product description*/
 @mixin order-btn{
