--- a/src/stylus/app.scss
+++ b/src/stylus/app.scss
@@ -10,7 +10,7 @@ html, body, div, span, applet, object, iframe, h2, h3, h4, h5, h6, p, blockquote
 .header__element, .categories__layoutCategories, .tab-content__layoutitems, tab-content__layoutadd, .category, .navbar__link,  .breadcrumb__list, .min-img__arrow, .min-img__arrow, .min-img--style, .layout-description__header, .layout-description__img-star, .add-cart__btn, .lineSocial__line-social, .addressinfo__text,   {
     display:inline-block;
 }
-.header__element--logo, .header-element__authorization--img, .header-element__basket--img, .product-description__slider-img, .product-description__layout-description, .layout-description__quantiti, {
+.header__element--logo, .header-element__authorization--img, .header-element__basket--img, .slider, .product-description__layout-description, .layout-description__quantiti, {
       float: left;
 }
 
