--- a/src/stylus/style.scss
+++ b/src/stylus/style.scss
@@ -31,15 +31,19 @@ html, body {
     box-shadow: 0 0px 0px transparent; } }
 /*Login*/
 .modal-dialog__login-form {
-  margin: 10% auto;
-  position: relative;
-  width: 300px;
-  min-height: 200px;
-  border: 1px solid black;
-  border-radius: 4px; }
+    margin: 10% auto;
+    position: absolute;
+    left: 50%;
+    width: 300px;
+    margin-left: -150px;
+    min-height: 200px;
+    border: 1px solid #000;
+    border-radius: 4px;
+    z-index: 6;
+}
 .login-form {
   padding: 20px 40px 35px 40px;
-  background: (linear, 100% 100%, 100% 0%, color-stop(0.57, #e6e6e6), to(white)); 
+  background: #fff; 
     &__close{
   position: absolute;
   right: -10px;
@@ -102,7 +106,7 @@ html, body {
   bottom: 0;
   left: 0;
   right: 0;
-  z-index: 99999;
+  z-index: 3;
 
   background: rgba(0, 0, 0, 0.8); 
 }
