--- a/src/stylus/app.scss
+++ b/src/stylus/app.scss
@@ -21,3 +21,4 @@ html, body, div, span, applet, object, iframe, h2, h3, h4, h5, h6, p, blockquote
 @import "homePage.scss";
 @import "goods.scss";
 @import "cart.scss";
+@import "addres.scss";
