--- a/src/stylus/style.scss
+++ b/src/stylus/style.scss
@@ -420,13 +420,18 @@ nav, .itemsContent {
 
 .orderFormLayout {
     position: relative;
-    width: 390px; }
+    width: 390px;
+
+}
 .orderForm {
-    .line1, .line2, .line3, .line4, .line5, .lineValid{
-          position: relative;}
-  background-image: url("../img/Symbol/card-form.gif");
-  width: 390px;
-  height: 204px; 
+    margin: 20px auto;
+    background-image: url("../img/Symbol/card-form.gif");
+    background-repeat: no-repeat;
+    width: 390px;
+    height: 204px; 
+        .line1, .line2, .line3, .line4, .line5, .lineValid{
+    position: relative;
+    }
     .line1 {
   top: 45px;
   left: 17px;
