--- a/src/stylus/app.scss
+++ b/src/stylus/app.scss
@@ -14,6 +14,14 @@ html, body, div, span, applet, object, iframe, h2, h3, h4, h5, h6, p, blockquote
       float: left;
 }
 
+html, body {
+  height: 100%;
+  font-size: 16px; }
+#page{
+    height: 100%;
+}
+
+
 @import "header.scss";
 @import "content.scss";
 @import "footer.scss";
@@ -21,3 +29,4 @@ html, body, div, span, applet, object, iframe, h2, h3, h4, h5, h6, p, blockquote
 @import "homePage.scss";
 @import "goods.scss";
 @import "cart.scss";
+@import "Pay.scss";
